<resources>
    <string name="app_name">Caculator</string>
    <string name="action_settings">Settings</string>
    <string name="_9">9</string>
    <string name="_7">7</string>
    <string name="_4">4</string>
    <string name="_1">1</string>
    <string name="_8">8</string>
    <string name="_5">5</string>
    <string name="_2">2</string>
    <string name="_0">0</string>
    <string name="_6">6</string>
    <string name="_3">3</string>
    <string name="dec">.</string>
    <string name="add">+</string>
    <string name="c">c</string>
    <string name="percent">%</string>
    <string name="sub">-</string>
    <string name="equals">=</string>
    <string name="signs">\u00B1</string>
    <string name="SQRT">\u221A</string>
    <string name="divides">\u00F7</string>
    <string name="multiples">\u00D7</string>
</resources>
