<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Caculator"
    tools:showIn="@layout/activity_caculator">

    <android.support.constraint.Guideline
        android:id="@+id/TopGuide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_begin="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.constraint.Guideline
        android:id="@+id/LeftGuide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_begin="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.constraint.Guideline
        android:id="@+id/BottomGuide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_end="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.constraint.Guideline
        android:id="@+id/RightGuide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_end="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/displayView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="textEnd"
        android:textSize="36sp"
        app:layout_constraintEnd_toStartOf="@+id/RightGuide"
        app:layout_constraintStart_toStartOf="@+id/LeftGuide"
        app:layout_constraintTop_toTopOf="@+id/TopGuide" />

    <Button
        android:id="@+id/num7"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:onClick="OnClick"
        android:text="@string/_7"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/num4"
        app:layout_constraintEnd_toStartOf="@+id/num8"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/LeftGuide"
        app:layout_constraintStart_toStartOf="@+id/LeftGuide"
        app:layout_constraintTop_toBottomOf="@+id/displayView" />

    <Button
        android:id="@+id/num4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:onClick="OnClick"
        android:text="@string/_4"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/num1"
        app:layout_constraintEnd_toStartOf="@+id/num5"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/LeftGuide"
        app:layout_constraintTop_toBottomOf="@+id/num7" />

    <Button
        android:id="@+id/num1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:onClick="OnClick"
        android:text="@string/_1"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/SignChange"
        app:layout_constraintEnd_toStartOf="@+id/num2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/LeftGuide"
        app:layout_constraintTop_toBottomOf="@+id/num4" />

    <Button
        android:id="@+id/SignChange"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:onClick="OnClick"
        android:text="@string/signs"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/BottomGuide"
        app:layout_constraintEnd_toStartOf="@+id/num0"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/LeftGuide"
        app:layout_constraintTop_toBottomOf="@+id/num1" />

    <Button
        android:id="@+id/num8"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:onClick="OnClick"
        android:text="@string/_8"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/num5"
        app:layout_constraintEnd_toStartOf="@+id/num9"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/num7"
        app:layout_constraintTop_toBottomOf="@+id/displayView" />

    <Button
        android:id="@+id/num5"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:onClick="OnClick"
        android:text="@string/_5"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/num2"
        app:layout_constraintEnd_toStartOf="@+id/num6"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/num4"
        app:layout_constraintTop_toBottomOf="@+id/num8" />

    <Button
        android:id="@+id/num2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:onClick="OnClick"
        android:text="@string/_2"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/num0"
        app:layout_constraintEnd_toStartOf="@+id/num3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/num1"
        app:layout_constraintTop_toBottomOf="@+id/num5" />

    <Button
        android:id="@+id/num0"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:onClick="OnClick"
        android:text="@string/_0"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/BottomGuide"
        app:layout_constraintEnd_toStartOf="@+id/decimal"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/SignChange"
        app:layout_constraintTop_toBottomOf="@+id/num2" />

    <Button
        android:id="@+id/num9"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:onClick="OnClick"
        android:text="@string/_9"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/num6"
        app:layout_constraintEnd_toStartOf="@+id/squareRoot"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/num8"
        app:layout_constraintTop_toBottomOf="@+id/displayView" />

    <Button
        android:id="@+id/num6"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:onClick="OnClick"
        android:text="@string/_6"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/num3"
        app:layout_constraintEnd_toStartOf="@+id/divide"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/num5"
        app:layout_constraintTop_toBottomOf="@+id/num9" />

    <Button
        android:id="@+id/num3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:onClick="OnClick"
        android:text="@string/_3"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/decimal"
        app:layout_constraintEnd_toStartOf="@+id/multiply"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/num2"
        app:layout_constraintTop_toBottomOf="@+id/num6" />

    <Button
        android:id="@+id/decimal"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:onClick="OnClick"
        android:text="@string/dec"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/BottomGuide"
        app:layout_constraintEnd_toStartOf="@+id/add"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/num0"
        app:layout_constraintTop_toBottomOf="@+id/num3" />

    <Button
        android:id="@+id/squareRoot"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:onClick="OnClick"
        android:text="@string/SQRT"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/divide"
        app:layout_constraintEnd_toStartOf="@+id/clear"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/num9"
        app:layout_constraintTop_toBottomOf="@+id/displayView" />

    <Button
        android:id="@+id/divide"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:onClick="OnClick"
        android:text="@string/divides"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/multiply"
        app:layout_constraintEnd_toStartOf="@+id/percentage"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/num6"
        app:layout_constraintTop_toBottomOf="@+id/squareRoot" />

    <Button
        android:id="@+id/multiply"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:onClick="OnClick"
        android:text="@string/multiples"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/add"
        app:layout_constraintEnd_toStartOf="@+id/subtract"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/num3"
        app:layout_constraintTop_toBottomOf="@+id/divide" />

    <Button
        android:id="@+id/add"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:onClick="OnClick"
        android:text="@string/add"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/BottomGuide"
        app:layout_constraintEnd_toStartOf="@+id/equal"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/decimal"
        app:layout_constraintTop_toBottomOf="@+id/multiply" />

    <Button
        android:id="@+id/clear"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:onClick="OnClick"
        android:text="@string/c"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/percentage"
        app:layout_constraintEnd_toStartOf="@+id/RightGuide"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/squareRoot"
        app:layout_constraintTop_toBottomOf="@+id/displayView" />

    <Button
        android:id="@+id/percentage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:onClick="OnClick"
        android:text="@string/percent"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/subtract"
        app:layout_constraintEnd_toStartOf="@+id/RightGuide"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/divide"
        app:layout_constraintTop_toBottomOf="@+id/clear" />

    <Button
        android:id="@+id/subtract"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:onClick="OnClick"
        android:text="@string/sub"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/equal"
        app:layout_constraintEnd_toStartOf="@+id/RightGuide"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/multiply"
        app:layout_constraintTop_toBottomOf="@+id/percentage" />

    <Button
        android:id="@+id/equal"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:onClick="OnClick"
        android:text="@string/equals"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/BottomGuide"
        app:layout_constraintEnd_toStartOf="@+id/RightGuide"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/add"
        app:layout_constraintTop_toBottomOf="@+id/subtract" />

</android.support.constraint.ConstraintLayout>